# II-Sem-Lab

./: .gitignore  README.md
F14/: input.txt  input4.txt  main.cpp  tests.md
G9/: CMakeLists.txt  SinglyLinkedList.h  singly_linked_list_manual.cpp  sll_unit_tests.cpp  std_list_manual.cpp  std_unit_tests.cpp  test_plan.md
H12/: CMakeLists.txt  Menu.h  compile_commands.json  main.cpp  old_main.cpp  test_plan.md  tests.cpp
H12/Date/: BufferDate.cpp  Date.cpp  Date.h  DateFile.cpp  DateFile.h
komanda/: main.cpp  team.out
komanda/komanda_test_win/: team.o4
pasts/: main.cpp  post.out
